# dadosgov-metrics

./: .envExample  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  prune-logs.sh  requirements.txt  setup.py
config/: airflow-configuracao.md  connections.json  variables.json
dags/: metrics_etl.py
docs/: airflow-configuracao.md  connections.json  variables.json
scripts/: airflow-entrypoint.sh  create_tables.sql  hydra.ecosystem.config.js  import_matomo_metrics.py  pyproject.toml
