[project]
name = "import-matomo-metrics"
version = "0.1.0"
description = "Import metrics from Matomo (Piwik) into the Hydra CSV PostgreSQL database"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary",
    "requests",
    "pymongo"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
